# medCore

./: .gitignore  CMakeLists.txt  UI_FRAMEWORK_GUIDE.md  VTK_BUILD_NOTES.md  VTK_MANUAL_BUILD.md  build_vtk.ps1
src/app/: main.cpp
src/app/software/: BaseSoftwareInitializer.cpp  BaseSoftwareInitializer.h  RedisSoftwareResolver.cpp  RedisSoftwareResolver.h  SoftwareInitializerFactory.cpp  SoftwareInitializerFactory.h
src/communication/datasource/: PollingSource.cpp  PollingSource.h  PollingTask.cpp  PollingTask.h  SourceBase.cpp  SourceBase.h  StateSample.h  SubscriptionSource.cpp  SubscriptionSource.h
src/communication/hub/: CommunicationHub.cpp  CommunicationHub.h
src/communication/redis/: RedisGateway.cpp  RedisGateway.h
src/communication/routing/: MessageRouter.cpp  MessageRouter.h
src/contracts/: LogicNotification.h  UiAction.h
src/logic/gateway/: ILogicGateway.h
src/logic/registry/: ModuleLogicHandler.cpp  ModuleLogicHandler.h  ModuleLogicRegistry.cpp  ModuleLogicRegistry.h
src/logic/runtime/: LogicRuntime.cpp  LogicRuntime.h
src/logic/scene/: SceneGraph.cpp  SceneGraph.h
src/logic/scene/nodes/: LineNode.cpp  LineNode.h  ModelNode.cpp  ModelNode.h  NodeBase.cpp  NodeBase.h  PointNode.cpp  PointNode.h  TransformNode.cpp  TransformNode.h
src/logic/workflow/: WorkflowStateMachine.cpp  WorkflowStateMachine.h
src/modules/navigation/: NavigationModuleCoordinator.cpp  NavigationModuleCoordinator.h  NavigationModuleHandler.cpp  NavigationModuleHandler.h
src/modules/params/: ParamsModuleCoordinator.cpp  ParamsModuleCoordinator.h  ParamsModuleHandler.cpp  ParamsModuleHandler.h
src/modules/planning/: PlanningModuleCoordinator.cpp  PlanningModuleCoordinator.h  PlanningModuleHandler.cpp  PlanningModuleHandler.h
src/modules/pointpick/: PointPickModuleCoordinator.cpp  PointPickModuleCoordinator.h  PointPickModuleHandler.cpp  PointPickModuleHandler.h
src/shell/: MainWindow.cpp  MainWindow.h  WorkspaceShell.cpp  WorkspaceShell.h
src/ui/coordination/: ApplicationCoordinator.cpp  ApplicationCoordinator.h  ModuleCoordinator.cpp  ModuleCoordinator.h
src/ui/globalui/: GlobalUiManager.cpp  GlobalUiManager.h
src/ui/pages/: PageManager.cpp  PageManager.h
src/ui/vtk3d/: VtkSceneWindow.cpp  VtkSceneWindow.h
